<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oldpaperbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_imgvw"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/acc_logo"
            android:src="@drawable/mwslogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/logo_imgvw"
            android:text="@string/app_name"
            android:textColor="@color/dim_red"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_imgvw"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/round_shape"
            android:hint="@string/hint_text"
            android:padding="9dip"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/latex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_shape"
            android:cursorVisible="true"
            android:hint="@string/hint_latex"
            android:padding="9dip"
            android:textColor="@color/black" />

        <Button
            android:onClick="startSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/latex_input"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_shape"
            android:padding="10dip"
            android:text="@string/btn_search"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>